# test_bug_pyfaefs_github_actions

./: pyproject.toml
.github/workflows/: ci.yml
tests/: test_01.py
